# INSANE_DisassemblerAMD64

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Readme.MD  ThreeByte38.cpp  ThreeByte3A.cpp  TwoByte.cpp  main.cpp
Example/: ExampleCLIDasm.cpp
Include/: Aliases.h  ArenaAllocator.h  DASMInst_t.h  INSANE_DisassemblerAMD64.h  Instruction_t.h  Masks.h  Rules.h
Include/EVEX/: EVEXInst_t.h  EVEXPrefix_t.h
Include/Legacy/: LegacyInst_t.h  LegacyOpCode_t.h  LegacyPrefix.h
Include/Operand/: CEOperandModes.h  CEOperandTypes.h  OperandModes.h  OperandTypes.h  Operand_t.h
Include/Standard/: Displacement_t.h  Immediate_t.h  ModRM_t.h  OpCodeDesc_t.h  OpCode_t.h  Register_t.h  SIB_t.h
Include/Standard/Operand/: CEOperandModes.h  CEOperandTypes.h  OperandModes.h  OperandTypes.h  Operand_t.h
Include/VEX/: VEXInst_t.h  VEXPrefix_t.h
Tools/EVEXInstTableGen/: EVEXTableGen.cpp  x86-opcode-map.cpp
Tools/TableGenerator/: TableGenerator.cpp  build.bat
Tools/VEXInstTableGen/: TableValidation.cpp
Tools/ValidAVXInst/: ValidAVXInst.cpp  build.bat  run.bat
src/: DASMInst_t.cpp  DASMRules.h  INSANE_DisassemblerAMD64.cpp  Instruction_t.cpp  ObjectNomenclature.h  VEXEncodingNotes.txt  readme.txt
src/Decoder/: Decoder.cpp  Decoder.h
src/Defs/: OpCode_t.h
src/Defs/EVEX/: EVEXInst_t.cpp  EVEXPrefix_t.cpp
src/Defs/Legacy/: LegacyInst_t.cpp  LegacyOpCode_t.cpp  LegacyPrefix_t.cpp
src/Defs/Operand/: Operand_t.cpp
src/Defs/Standard/: Displacement_t.cpp  Immediate_t.cpp  ModRM_t.cpp  OpCodeDesc_t.cpp  OpCode_t.cpp  Register_t.cpp  SIB_t.cpp
src/Defs/Standard/Operand/: Operand_t.cpp
src/Defs/VEX/: VEXInst_t.cpp  VEXPrefix_t.cpp
src/Disassembler/: Disassembler.cpp  Disassembler.h
src/Disassembler/InstSummary/: InstSummary_t.cpp  InstSummary_t.h
src/Math/: SafeBitWiseOps.asm  SafeBitWiseOps.h
src/Tables/: Tables.cpp  Tables.h
src/Util/Terminal/: ConsoleSystem.cpp  ConsoleSystem.h  Terminal.h
src/Util/TestCases/: TestCases.cpp  TestCases.h
